Fix spacing for traffic gauge error message
Refs #104

--- a/sipa/static/css/style.css
+++ b/sipa/static/css/style.css
@@ -112,6 +112,10 @@ a#traffic_gauge_link {
     -o-transition: text-shadow 1s ease, color 1s ease;
 }
 
+#traffic_gauge_error {
+    margin-top: 1em;
+}
+
 div#row-contact div.module > div > div.row + div.row{
     margin-top: 1em;
 }
